Final commit (I think). Added a lot of check-ups, exceptions, logging and full Javadoc-comments project-wide.